# libelf

./: ChangeLog  MANIFEST  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
lib/: 32.fsize.c  32.getphdr.c  32.newehdr.c  32.newphdr.c  32.xlatetof.c  64.xlatetof.c  Makefile.in  Makefile.w32  begin.c  checksum.c  config.h.w32  cook.c  data.c  elf_repl.h  end.c  errmsg.c  errors.h  gelfehdr.c  gelfphdr.c  gelfshdr.c  getdata.c  hash.c  input.c  libelf.h  newdata.c  newscn.c  nlist.c  opt.delscn.c  private.h  rawdata.c  strptr.c  sys_elf.h.in  sys_elf.h.w32  update.c  verdef.h  verneed.h  version.c  x.elfext.c
po/: Makefile.in  de.gmo  de.msg  de.po  gmo2msg.c  libelf.pot
w32/: Makefile.in  Makefile.w32  build.bat  config.h  sys_elf.h
